--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>5.11.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.3.1-jre</version>
+        </dependency>
+
 
     </dependencies>
 
